Fix mobile logo view and fix text wrapping

--- a/src/styles/leo-provider-app.styl
+++ b/src/styles/leo-provider-app.styl
@@ -27,7 +27,6 @@
 
   .leo-nav {
     margin-left: 0;
-    width: 100%;
   }
 
   @media (min-width: 768px) {
@@ -510,11 +509,17 @@
   }
 
   @media (max-width: 700px) {
+    // .message-back {
+    //     position: fixed;
+    //     margin-top: 20px;
+    //     margin-left: -15px;
+    //     z-index: 10000;
+    // }
+
     .message-back {
-        position: fixed;
-        margin-top: 20px;
-        margin-left: -15px;
-        z-index: 10000;
+      position: absolute;
+      margin-top: 15px;
+      margin-left: -30px;
     }
 
     #staff-selection { margin-left: -81%; }
